--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -47,7 +47,7 @@
 <body>
     <h1>Privacy Policy</h1>
 
-    <p>This privacy policy applies to the Rubik Match app (hereby referred to as "Application") for mobile devices that was created by Solitude Games (hereby referred to as "Service Provider") as a Free service. This service is intended for use "AS IS".</p>
+    <p>This privacy policy applies to the Cubic Match app (hereby referred to as "Application") for mobile devices that was created by Solitude Games (hereby referred to as "Service Provider") as a Free service. This service is intended for use "AS IS".</p>
 
     <h2>Information Collection and Use</h2>
     <p>The Application collects information when you download and use it. This information may include information such as:</p>
