--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Rubik Match Terms and Conditions">
-    <title>Terms and Conditions - Rubik Match</title>
+    <meta name="description" content="Cubic Match Terms and Conditions">
+    <title>Terms and Conditions - Cubic Match</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <style>
         body {
@@ -54,15 +54,15 @@
     <h1>Terms and Conditions</h1>
 
     <p><strong>Effective Date:</strong> September 12, 2024</p>
-    <p>Welcome to Rubik Match. By accessing or using our mobile application ("App"), you agree to comply with and be bound by the following terms and conditions ("Terms"). Please review the following Terms carefully. If you do not agree with these Terms, you must not access or use the App.</p>
+    <p>Welcome to Cubic Match. By accessing or using our mobile application ("App"), you agree to comply with and be bound by the following terms and conditions ("Terms"). Please review the following Terms carefully. If you do not agree with these Terms, you must not access or use the App.</p>
 
     <h2>1. General Information</h2>
-    <p>Rubik Match is a mobile game app published by an individual in Turkey.</p>
+    <p>Cubic Match is a mobile game app published by an individual in Turkey.</p>
     <p>The Terms are effective as of September 12, 2024 and may be updated from time to time.</p>
     <p>The App is made available to users of all ages, including those under 13. However, certain features such as purchases may require parental consent or supervision.</p>
 
     <h2>2. No Collection of Personal Information</h2>
-    <p>Rubik Match does not collect, store, or share any personal information from its users.</p>
+    <p>Cubic Match does not collect, store, or share any personal information from its users.</p>
     <p>The App does not require or ask users to provide any personal details such as names, email addresses, or contact information.</p>
 
     <h2>3. Digital Analytics and Tracking</h2>
@@ -70,11 +70,11 @@
     <p>Tracking solutions are also used for retargeting purposes in advertisements, which helps us deliver relevant content and ads to our users.</p>
 
     <h2>4. Advertisements</h2>
-    <p>Rubik Match may display third-party advertisements to users, which may be targeted based on non-personal data such as device type and usage patterns.</p>
+    <p>Cubic Match may display third-party advertisements to users, which may be targeted based on non-personal data such as device type and usage patterns.</p>
     <p>By using the App, you acknowledge that ads may be served to you and may be tailored using information collected by our analytics and tracking solutions.</p>
 
     <h2>5. Purchases and Payments</h2>
-    <p>Rubik Match offers users the ability to make one-time purchases within the App. These purchases may unlock additional features, remove ads, or provide other enhancements to gameplay.</p>
+    <p>Cubic Match offers users the ability to make one-time purchases within the App. These purchases may unlock additional features, remove ads, or provide other enhancements to gameplay.</p>
     <p>All payments are processed through trusted third-party payment providers, and no payment information (such as credit card numbers or billing details) is collected or stored by the App itself.</p>
 
     <h2>6. Use by Children</h2>
@@ -82,17 +82,17 @@
     <p>No personal information is collected from children, and any in-app purchases require explicit authorization from a parent or guardian.</p>
 
     <h2>7. Email Communication</h2>
-    <p>Rubik Match does not send newsletters or promotional emails to users. However, users can reach out to us at <a href="mailto:thesolitudegames@gmail.com">thesolitudegames@gmail.com</a> for any inquiries or support.</p>
+    <p>Cubic Match does not send newsletters or promotional emails to users. However, users can reach out to us at <a href="mailto:thesolitudegames@gmail.com">thesolitudegames@gmail.com</a> for any inquiries or support.</p>
 
     <h2>8. Third-Party Links</h2>
-    <p>The App may include links to third-party websites or services. These links are provided for your convenience, and Rubik Match does not endorse or assume responsibility for the content, privacy practices, or terms and conditions of those third parties.</p>
+    <p>The App may include links to third-party websites or services. These links are provided for your convenience, and Cubic Match does not endorse or assume responsibility for the content, privacy practices, or terms and conditions of those third parties.</p>
 
     <h2>9. Modifications to Terms</h2>
     <p>We reserve the right to modify or update these Terms at any time. Any changes will be reflected in the "Effective Date" at the top of this page.</p>
     <p>Continued use of the App after any modifications indicates your acceptance of the updated Terms.</p>
 
     <h2>10. Limitation of Liability</h2>
-    <p>Rubik Match is provided "as is" without warranties of any kind, either express or implied. We do not guarantee the uninterrupted availability or error-free operation of the App.</p>
+    <p>Cubic Match is provided "as is" without warranties of any kind, either express or implied. We do not guarantee the uninterrupted availability or error-free operation of the App.</p>
     <p>To the maximum extent permitted by law, we are not liable for any indirect, incidental, or consequential damages arising out of your use of the App, including but not limited to loss of data or unauthorized access.</p>
 
     <h2>11. Governing Law</h2>
